fix sections & custom scrollbar

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,7 +4,7 @@
     align-items: center;
 }
 
-.header__nav {
+.header__nav__list {
     display: flex;
     gap: 30px;
     padding: 26px 0;
