--- a/src/css/section9.css
+++ b/src/css/section9.css
@@ -1,3 +1,7 @@
+#contact {
+    padding: 0 0 30px 0;
+}
+
 .form {
     display: flex;
     align-items: center;
